# smriti

./: .gitignore  Cargo.toml  README.md  blog-post.md  server.json
examples/: README.md
examples/healthcare-care-coordinator/: README.md  demo.sh  setup.sh
examples/lab-trial-optimizer/: README.md  demo.sh  setup.sh
examples/mcp-claude-integration/: README.md  claude_desktop_config.json  example_prompts.md
examples/multi-agent-collaboration/: README.md  demo.sh  setup.sh
examples/personal-knowledge-base/: README.md  demo.sh  setup.sh
rust-bridge/: Cargo.toml
src/: errors.rs  lib.rs  main.rs
src/api/: server.rs
src/api/routes/: agent.rs  graph.rs  mod.rs  notes.rs
src/cli/: commands.rs  handlers.rs
src/features/: daily_digest.rs  mod.rs  smart_links.rs
src/graph/: knowledge_graph.rs  mod.rs
src/mcp/: handlers.rs  server.rs
src/models/: agent.rs  link.rs  mod.rs  note.rs
src/parser/: markdown.rs  mod.rs  wikilink.rs
src/storage/: db.rs  mod.rs  operations.rs
src/sync/: engine.rs
