[package]
name = "agentic-notes-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "agentic_notes_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
agentic-notes = { path = ".." }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dependencies.uniffi]
version = "0.28"
features = ["cli"]
